# ml_algorithms

./: CMakeLists.txt
include/: functions.h
linear_regression/: CMakeLists.txt  functions.cpp  functions.h  linear_regression.cpp  linear_regression.h  linear_regression_functions.cpp  main.cpp
linear_regression/include/: linear_regression_functions.h
logistic_regression/: CMakeLists.txt  logistic_regression_functions.cpp  main.cpp
logistic_regression/include/: logistic_regression_functions.h
personal_lib/include/: matrixops.h
personal_lib/lib/: libusefulfuncs_shared.so.1.0
